<resources>
    <string name="app_name">Student Menu</string>
    <string name="action_settings">Settings</string>
    <string name="test">Test</string>
    <string name="menu_search">Menu Search</string>
    <string name="search_menu">Search Menu</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_menu">Add Menu</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="desc">Description</string>
    <string name="add">Add</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe">Recipe</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="next">Next</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque debitis incidunt mollitia nisi totam, veritatis? Ea eligendi, ipsum itaque quam quasi quisquam repellat! Harum id, natus quis rem repudiandae sint.</string>
    <string name="pick_image_intent_text">Select Photo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_map_api_key">AIzaSyBi314oBG9MmIknVlZrZGg8ppNQHnZkQDg</string>


</resources>
