<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="#00aeff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/add_menu"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:background="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addMenuName"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="30"/>

            <EditText
                android:id="@+id/addMenuDescription"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:hint="@string/desc"
                android:inputType="text"
                android:maxLength="100"/>


            <Button
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:onClick="addMenu"
                android:text="@string/next"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="60dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>


