<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="320dp"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="#00aeff">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_menu"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:background="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/addMenuTitle"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <EditText
                    android:id="@+id/addMenuRecipe"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/recipe"
                    android:inputType="textMultiLine"
                    android:maxLength="300"/>
            </LinearLayout>

            <Button
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:onClick="addMenuWithDescription"
                android:text="@string/add"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>


